--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@ projs/batchfield/node_modules/*
 projs/batchfield/dist/*
 projs/passfoto.ro-react-app/node_modules/*
 projs/passfoto.ro/node_modules/*
+projs/passfoto.ro/dist/*
+projs/passfoto.ro/.tmp/*
+
+
+
+
+
+
+
+
+
