batchfield-react-app project

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 projs/batchfield/node_modules/*
 projs/batchfield/dist/*
+
 projs/passfoto.ro-react-app/node_modules/*
 projs/passfoto.ro/node_modules/*
+
 projs/passfoto.ro/dist/*
 projs/passfoto.ro/.tmp/*
 
-
-
-
-
-
-
-
-
+projs/batchfield-react-app/node_modules/*
