--- a/projs/batchfield-react-app/package.json
+++ b/projs/batchfield-react-app/package.json
@@ -3,13 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "es6-promise": "^4.1.1",
+    "faker": "^4.1.0",
+    "firebase": "^4.1.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-materialize": "^1.0.1",
+    "react-router-dom": "^4.1.1",
+    "webflow-api": "^0.4.1"
+  },
+  "devDependencies": {
+    "node-sass-chokidar": "0.0.2",
+    "react-scripts": "1.0.7",
+    "react-snapshot": "^1.1.0"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
