--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -19,6 +19,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-materialize": "^1.0.6"
+    "react-materialize": "^1.0.6",
+    "react-slick": "^0.14.11"
   }
 }
