--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -10,7 +10,8 @@
     "react": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "reactive-blueimp-gallery": "^0.1.8"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
