--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
+    "react-share": "^1.15.1",
     "reactive-blueimp-gallery": "^0.1.8"
   },
   "scripts": {
