--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -8,6 +8,7 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
+    "react-owl-carousel2": "^0.2.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
@@ -24,8 +25,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-materialize": "^1.0.8",
-    "react-slick": "^0.14.11",
-    "slugify": "^1.1.0"
+    "react-materialize": "^1.0.10",
+    "slugify": "^1.2.1"
   }
 }
