--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -22,7 +22,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "devDependencies": {
     "react-materialize": "^1.0.10",
