--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -20,12 +20,13 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
+    "build": "npm run build-css && react-scripts build && react-snapshot",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "react-materialize": "^1.0.10",
+    "react-snapshot": "^1.0.4",
     "slugify": "^1.2.1"
   }
 }
