--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -8,12 +8,10 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
-    "react-owl-carousel2": "^0.2.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.10",
-    "react-share": "^1.15.1",
-    "reactive-blueimp-gallery": "^0.1.8"
+    "react-snapshot": "^2.0.0-0",
+    "react-scripts": "1.0.10"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -26,7 +24,9 @@
   },
   "devDependencies": {
     "react-materialize": "^1.0.10",
-    "react-snapshot": "^2.0.0-0",
-    "slugify": "^1.2.1"
+    "slugify": "^1.2.1",
+    "react-owl-carousel2": "^0.2.1",
+    "react-share": "^1.15.1",
+    "reactive-blueimp-gallery": "^0.1.9"
   }
 }
