--- a/projs/batchfield-react/package.json
+++ b/projs/batchfield-react/package.json
@@ -10,8 +10,9 @@
     "react": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-snapshot": "^2.0.0-0",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-snapshot": "^2.0.0-0"
+
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -41,6 +42,6 @@
       "/signup",
       "/other-path/exclude-me/**"
     ],
-    "snapshotDelay": 300
+    "snapshotDelay": 50
   }
 }
